<?xml version="1.0" encoding="utf-8"?> 

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingTop="5dp"
  android:minHeight="70dp"
  android:background="#F5F5F5"  > 
  
    <TextView
	      android:id="@+id/txtContaDescricao"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:text="@string/hello_world"
	      android:layout_alignParentLeft="true"
	      android:gravity="center_vertical"
	      android:textSize="20sp"
	      android:layout_marginLeft="15dp" 
      	  android:layout_marginRight="100dp"
	      android:textColor="#000000" />
	  
  <TextView
	      android:id="@+id/txtContaTipoProduto"
	      android:layout_below="@id/txtContaDescricao"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:text="@string/cidade"
	      android:layout_alignParentLeft="true"
	      android:gravity="center_vertical"
	      android:textSize="17sp"
      	  android:layout_marginTop="3dp"
	      android:layout_marginLeft="15dp" 
	      android:textColor="#555555" />
   
   <TextView
      android:id="@+id/txtContaValor"
      android:layout_width="100dp"
      android:layout_alignRight="@+id/txtContaDescricao"
      android:layout_alignTop="@+id/txtContaDescricao"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_marginTop="3dp"
      android:layout_marginRight="15dp"
      android:text="@string/estado"
      android:gravity="center_vertical|right"
      android:textSize="16sp" 
      android:textColor="#000000" />
  
  
</RelativeLayout>