<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fillViewport="true" 
    tools:context=".LoginActivity" >

   	    
    <LinearLayout
    android:id="@+id/ln"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:orientation="vertical">
    
        <Spinner android:id="@+id/spEstado"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:hint="@string/selecioneEstado"
		android:drawSelectorOnTop="true" />
    
        
        <Spinner android:id="@+id/spCidade"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:hint="@string/selecioneCidade"
		android:layout_marginTop="20dp"
		android:drawSelectorOnTop="true" />
            
       <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical" >        
           
        
	    <Button
	        android:id="@+id/btnCidConfirmar"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"        
	        android:textColor="#FFFF00"
	        android:background="#C40000"
	        android:textStyle="bold"
			android:layout_marginTop="25dp"
	        android:text="@string/confirmar" />
	</RelativeLayout>
	
     
	
  </LinearLayout>
  
   
</ScrollView>