<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fillViewport="true" 
    tools:context=".LoginActivity" >

   	    
    <LinearLayout
    android:id="@+id/ln"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:padding="10dp"
    android:orientation="vertical">
    
          
		  <TextView
		      android:id="@+id/txtConfirmarMesaDica"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_gravity="left|right"
		      android:textSize="18sp"     
		      android:gravity="center"
		      android:textColor="#000000"
		      android:paddingLeft="5dp"  
		      android:text="@string/exemplo_confirmar_mesa"  /> 
		      
		       <EditText
    	           android:id="@+id/edtNumeroMesa"
    	           android:layout_width="fill_parent"
    	           android:layout_height="wrap_content"
    	           android:layout_marginLeft="15dp"
    	           android:gravity="center_vertical|center_horizontal"
    	           android:hint="@string/digite_mesa"
    	           android:inputType="number"
    	           android:textAlignment="center"
    	           android:textColor="#C40000"
    	           android:textSize="20sp"
    	           android:textStyle="italic" />
    
            
       <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical" >        
           
        
	    <Button
	        android:id="@+id/btnExMesaConf"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"        
	        android:textColor="#FFFF00"
	        android:background="#C40000"
	        android:textStyle="bold"
			android:layout_marginTop="25dp"
	        android:text="@string/confirmar" />
	</RelativeLayout>
	
     
	
  </LinearLayout>
  
   
</ScrollView>